backend-ingress-uat.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atoloan-api-ingress
  namespace: atoloan-backend-uat
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - api.uat.atoloan.com
    secretName: atoloan-api-uat-tls
  rules:
  - host: api.uat.atoloan.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: atoloan-api
            port:
              number: 80
