frontend-ingress-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atoloan-ui-ingress
  namespace: atoloan-frontend-prod
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - atoloans.com
    - www.atoloans.com
    secretName: atoloan-frontend-prod-tls
  rules:
  - host: atoloans.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: atoloan-ui
            port:
              number: 80
  - host: www.atoloans.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: atoloan-ui
            port:
              number: 80
