frontend-ingress-uat.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atoloan-ui-ingress
  namespace: atoloan-frontend-uat
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - uat.atoloan.com
    secretName: atoloan-frontend-uat-tls
  rules:
  - host: uat.atoloan.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: atoloan-ui
            port:
              number: 80
